--- a/api-email/src/main/resources/application.properties
+++ b/api-email/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rickteixeira28@gmail.com
-spring.mail.password=mpgefzkuaozbzfqo
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
